# Hotel-management

./: CMakeLists.txt  README.md  hotel-db.c  hotel-ll.c  hotel-ll.h  hotel-main.c  hotel-mt.c  hotel-mt.h  hotel_db.h
database/: cards.txt  hotel-renewed.txt  hotel.txt
receipts/: 123456AF  12452126  12457896  21412346  21489346  214wf416  21544759  215466  2154se66  2154wdf5  TV98733K
